Rename documentation menu class

--- a/sass/docs/_menu.scss
+++ b/sass/docs/_menu.scss
@@ -1,10 +1,10 @@
-.menu {
+.docs-menu {
     border-radius: 3px;
     border: 1px solid #d8d8d8;
     font-size: 1.5rem;
 }
 
-.menu-item {
+.docs-menu-item {
     border-bottom: 1px solid #eee;
     display: block;
     padding: .6rem 1rem;
