Add layout and position helpers to the stylesheets

--- a/sass/styleguide/main.scss
+++ b/sass/styleguide/main.scss
@@ -1,6 +1,6 @@
 /*
 
-Sandbox
+Main stylesheet to be included in the styleguide to show examples and build the library
 -------
 
 This library is divided in the following sections:
@@ -11,14 +11,14 @@ This library is divided in the following sections:
 2.  Generic parts that load variables, functions and mixins. Use thisfolder for code that
     is applied all over the app but it is not specific to a base element or an object.
 
-3.  Helpers and useful chunks of code that do not fit in an object and it is generic enough.
+3.  Base elements are the building blocks of the page. Paragraphs, lists, images and so on.
+
+4.  Objects refer to each individual block that builds parts of the app.
+
+5.  Layout styles like background colors or images, usually they are refered as sections inside the dom html.
+
+6.  Helpers and useful chunks of code that do not fit in an object and it is generic enough.
     If possible, create objects.
-
-4.  Base elements are the building blocks of the page. Paragraphs, lists, images and so on.
-
-5.  Objects refer to each individual block that builds parts of the app.
-
-6.  Layout styles like background colors or images, usually they are refered as sections inside the dom html.
 
 7.  Vendor is code that other Javascript libraries use and do not tend to follow the OOCSS approach.
 
@@ -78,8 +78,10 @@ This library is divided in the following sections:
 @import "helpers/float";
 @import "helpers/font-sizes";
 @import "helpers/is-hidden";
+@import "helpers/layout";
 @import "helpers/no-scroll";
 @import "helpers/percent";
+@import "helpers/position";
 @import "helpers/white-spacing";
 @import "helpers/with-caret";
 
