--- a/views/partial/menu.html
+++ b/views/partial/menu.html
@@ -1,16 +1,15 @@
 <div class="one-quarter grid-column">
-  <nav class="menu">
-    <a class="menu-item {% if section == 'colors' %}selected{% endif %}" href="/docs/colors">Colors</a>
-    <a class="menu-item {% if section == 'buttons' %}selected{% endif %}" href="/docs/buttons">Buttons</a>
-    <a class="menu-item {% if section == 'containers' %}selected{% endif %}" href="/docs/containers">Containers</a>
-    <a class="menu-item {% if section == 'data-visualization' %}selected{% endif %}" href="/docs/data-visualization">Data visualization</a>
-    <a class="menu-item {% if section == 'icons' %}selected{% endif %}" href="/docs/icons">Icons</a>
-    <a class="menu-item {% if section == 'forms' %}selected{% endif %}" href="/docs/forms">Forms</a>
-    <a class="menu-item {% if section == 'lists' %}selected{% endif %}" href="/docs/lists">Lists</a>
-    <a class="menu-item {% if section == 'miscelanea' %}selected{% endif %}" href="/docs/miscelanea">Miscelanea</a>
-    <a class="menu-item {% if section == 'navigation' %}selected{% endif %}" href="/docs/navigation">Navigation</a>
-    <a class="menu-item {% if section == 'tables' %}selected{% endif %}" href="/docs/tables">Tables</a>
-    <a class="menu-item {% if section == 'typography' %}selected{% endif %}" href="/docs/typography">Typography</a>
-    <a class="menu-item {% if section == 'grid' %}selected{% endif %}" href="/docs/grid">Grid</a>
+  <nav class="docs-menu mr3">
+    <a class="docs-menu-item {% if section == 'colors' %}selected{% endif %}" href="/docs/colors">Colors</a>
+    <a class="docs-menu-item {% if section == 'buttons' %}selected{% endif %}" href="/docs/buttons">Buttons</a>
+    <a class="docs-menu-item {% if section == 'containers' %}selected{% endif %}" href="/docs/containers">Containers</a>
+    <a class="docs-menu-item {% if section == 'icons' %}selected{% endif %}" href="/docs/icons">Icons</a>
+    <a class="docs-menu-item {% if section == 'forms' %}selected{% endif %}" href="/docs/forms">Forms</a>
+    <a class="docs-menu-item {% if section == 'grid' %}selected{% endif %}" href="/docs/grid">Grid</a>
+    <a class="docs-menu-item {% if section == 'lists' %}selected{% endif %}" href="/docs/lists">Lists</a>
+    <a class="docs-menu-item {% if section == 'miscelanea' %}selected{% endif %}" href="/docs/miscelanea">Miscelanea</a>
+    <a class="docs-menu-item {% if section == 'navigation' %}selected{% endif %}" href="/docs/navigation">Navigation</a>
+    <a class="docs-menu-item {% if section == 'tables' %}selected{% endif %}" href="/docs/tables">Tables</a>
+    <a class="docs-menu-item {% if section == 'typography' %}selected{% endif %}" href="/docs/typography">Typography</a>
   </nav>
 </div>
