--- a/sass/styleguide/main.scss
+++ b/sass/styleguide/main.scss
@@ -56,6 +56,7 @@ This library is divided in the following sections:
 @import "objects/justify-columns";
 @import "objects/lists";
 @import "objects/media";
+@import "objects/menus";
 @import "objects/nav";
 @import "objects/pagination";
 @import "objects/panel";
