--- a/views/partial/menu.html
+++ b/views/partial/menu.html
@@ -7,6 +7,7 @@
     <a class="docs-menu-item {% if section == 'forms' %}selected{% endif %}" href="/docs/forms">Forms</a>
     <a class="docs-menu-item {% if section == 'grid' %}selected{% endif %}" href="/docs/grid">Grid</a>
     <a class="docs-menu-item {% if section == 'lists' %}selected{% endif %}" href="/docs/lists">Lists</a>
+    <a class="docs-menu-item {% if section == 'menus' %}selected{% endif %}" href="/docs/menus">Menus</a>
     <a class="docs-menu-item {% if section == 'miscelanea' %}selected{% endif %}" href="/docs/miscelanea">Miscelanea</a>
     <a class="docs-menu-item {% if section == 'navigation' %}selected{% endif %}" href="/docs/navigation">Navigation</a>
     <a class="docs-menu-item {% if section == 'tables' %}selected{% endif %}" href="/docs/tables">Tables</a>
