--- a/views/components/buttons/regular.html
+++ b/views/components/buttons/regular.html
@@ -1,6 +1,9 @@
 <button class="btn">Base</button>
 <button class="btn btn-primary">Primary</button>
-<button class="btn btn-success">Success</button>
+<button class="btn btn-success">
+  <svg class="icon"><use xlink:href="/svg-defs.svg#icon-nut"></use></svg>
+  Success
+</button>
 <button class="btn btn-service with-caret">Service</button>
 <button class="btn btn-danger">Danger</button>
 <button class="btn btn-contrast">Contrast</button>
