--- a/sass/styleguide/objects/_buttons.scss
+++ b/sass/styleguide/objects/_buttons.scss
@@ -36,6 +36,7 @@ $btn-base-v-padding:   ($btn-base-height - $btn-base-line-height)/2;
 
     & > [class^="icon"] {
         @extend %icon-text;
+        height: $btn-base-line-height - .2rem;
     }
 
     &.with-caret:after {
