--- a/views/components/lists/menu-list.html
+++ b/views/components/lists/menu-list.html
@@ -1,4 +1,4 @@
-<ul class="menu menu-list one-third">
+<ul class="sb-menu menu-list one-third">
   <li class="menu-list-item">
     <svg class="icon"><use xlink:href="/svg-defs.svg#icon-lifevest"></use></svg>
     Help
