--- a/views/components/menus/simple-menu.html
+++ b/views/components/menus/simple-menu.html
@@ -1,4 +1,4 @@
-<nav class="menu p2 one-third align-center mx-auto">
+<nav class="sb-menu p2 one-third align-center mx-auto">
   <svg class="icon-twitter icon-size-40 mb2">
     <use xlink:href="/svg-defs.svg#icon-twitter"></use>
   </svg>
