--- a/views/components/menus/menu-positioning.html
+++ b/views/components/menus/menu-positioning.html
@@ -1,6 +1,6 @@
-<div class="menu-align-bottom-left">
+<div class="sb-menu-align-bottom-left">
   <button class="btn btn-service">Open menu</button>
-  <nav class="menu-bubble-top-left menu-list prel">
+  <nav class="sb-menu-bubble-top-left menu-list prel">
     <a class="menu-list-item" href="">
       <svg class="icon"><use xlink:href="/svg-defs.svg#icon-lifevest"></use></svg>
       Help
