--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -117,4 +117,39 @@
     </svg>
     <span class="icon-container-name">nuts</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-document">
+      <use xlink:href="/svg-defs.svg#icon-document"></use>
+    </svg>
+    <span class="icon-container-name">document</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-audience">
+      <use xlink:href="/svg-defs.svg#icon-audience"></use>
+    </svg>
+    <span class="icon-container-name">audience</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-play-video">
+      <use xlink:href="/svg-defs.svg#icon-play-video"></use>
+    </svg>
+    <span class="icon-container-name">play-video</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-speech-bubble">
+      <use xlink:href="/svg-defs.svg#icon-speech-bubble"></use>
+    </svg>
+    <span class="icon-container-name">speech-bubble</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-webcam">
+      <use xlink:href="/svg-defs.svg#icon-webcam"></use>
+    </svg>
+    <span class="icon-container-name">webcam</span>
+  </div>
 </div>
