Added new svg icons

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -14,6 +14,27 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-twitter">
+      <use xlink:href="/svg-defs.svg#icon-twitter-radius"></use>
+    </svg>
+    <span class="icon-container-name">twitter-radius</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-instagram">
+      <use xlink:href="/svg-defs.svg#icon-instagram"></use>
+    </svg>
+    <span class="icon-container-name">instagram</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-instagram-radius">
+      <use xlink:href="/svg-defs.svg#icon-instagram-radius"></use>
+    </svg>
+    <span class="icon-container-name">instagram-radius</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-trash">
       <use xlink:href="/svg-defs.svg#icon-trash"></use>
     </svg>
@@ -151,5 +172,33 @@
       <use xlink:href="/svg-defs.svg#icon-webcam"></use>
     </svg>
     <span class="icon-container-name">webcam</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-attach">
+      <use xlink:href="/svg-defs.svg#icon-attach"></use>
+    </svg>
+    <span class="icon-container-name">attach</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-envelope">
+      <use xlink:href="/svg-defs.svg#icon-envelope"></use>
+    </svg>
+    <span class="icon-container-name">envelope</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-geopoint">
+      <use xlink:href="/svg-defs.svg#icon-geopoint"></use>
+    </svg>
+    <span class="icon-container-name">geopoint</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-search">
+      <use xlink:href="/svg-defs.svg#icon-search"></use>
+    </svg>
+    <span class="icon-container-name">search</span>
   </div>
 </div>
