--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -201,4 +201,25 @@
     </svg>
     <span class="icon-container-name">search</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-txt">
+      <use xlink:href="/svg-defs.svg#icon-txt"></use>
+    </svg>
+    <span class="icon-container-name">txt</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-list">
+      <use xlink:href="/svg-defs.svg#icon-list"></use>
+    </svg>
+    <span class="icon-container-name">list</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-usermail">
+      <use xlink:href="/svg-defs.svg#icon-usermail"></use>
+    </svg>
+    <span class="icon-container-name">usermail</span>
+  </div>
 </div>
