Added more icons - retweet

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -222,4 +222,11 @@
     </svg>
     <span class="icon-container-name">usermail</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-retweet">
+      <use xlink:href="/svg-defs.svg#icon-retweet"></use>
+    </svg>
+    <span class="icon-container-name">retweet</span>
+  </div>
 </div>
