Add chronometer icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -229,4 +229,11 @@
     </svg>
     <span class="icon-container-name">retweet</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-chronometer">
+      <use xlink:href="/svg-defs.svg#icon-chronometer"></use>
+    </svg>
+    <span class="icon-container-name">chronometer</span>
+  </div>
 </div>
