--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -236,4 +236,11 @@
     </svg>
     <span class="icon-container-name">chronometer</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-tag">
+      <use xlink:href="/svg-defs.svg#icon-tag"></use>
+    </svg>
+    <span class="icon-container-name">tag</span>
+  </div>
 </div>
