Add scissors icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -243,4 +243,11 @@
     </svg>
     <span class="icon-container-name">tag</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-scissors">
+      <use xlink:href="/svg-defs.svg#icon-scissors"></use>
+    </svg>
+    <span class="icon-container-name">scissors</span>
+  </div>
 </div>
