Add comparison icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -250,4 +250,11 @@
     </svg>
     <span class="icon-container-name">scissors</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-comparison">
+      <use xlink:href="/svg-defs.svg#icon-comparison"></use>
+    </svg>
+    <span class="icon-container-name">comparison</span>
+  </div>
 </div>
