adds the camera icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -253,6 +253,13 @@
 
   <div class="icon-container">
     <svg class="icon-comparison">
+      <use xlink:href="/svg-defs.svg#icon-camera"></use>
+    </svg>
+    <span class="icon-container-name">camera</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-comparison">
       <use xlink:href="/svg-defs.svg#icon-comparison"></use>
     </svg>
     <span class="icon-container-name">comparison</span>
