Add all notification icons

--- a/sass/docs/_icons.scss
+++ b/sass/docs/_icons.scss
@@ -40,3 +40,15 @@ $icon-label-height: 2.8rem;
     right: -1px;
     text-align: center;
 }
+
+.icon-pdf {
+    padding: 6px;
+}
+
+.icon-ads {
+    padding: 10px;
+}
+
+.icon-xls {
+    padding: 10px;
+}
