--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -217,6 +217,20 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-list-add">
+      <use xlink:href="/svg-defs.svg#icon-list-add"></use>
+    </svg>
+    <span class="icon-container-name">list-add</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-list-remove">
+      <use xlink:href="/svg-defs.svg#icon-list-remove"></use>
+    </svg>
+    <span class="icon-container-name">list-remove</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-usermail">
       <use xlink:href="/svg-defs.svg#icon-usermail"></use>
     </svg>
@@ -242,6 +256,20 @@
       <use xlink:href="/svg-defs.svg#icon-scissors"></use>
     </svg>
     <span class="icon-container-name">scissors</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-scissors-add">
+      <use xlink:href="/svg-defs.svg#icon-scissors-add"></use>
+    </svg>
+    <span class="icon-container-name">scissors-add</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-scissors-remove">
+      <use xlink:href="/svg-defs.svg#icon-scissors-remove"></use>
+    </svg>
+    <span class="icon-container-name">scissors-remove</span>
   </div>
 
   <div class="icon-container">
@@ -284,5 +312,82 @@
       <use xlink:href="/svg-defs.svg#icon-bubble-rt"></use>
     </svg>
     <span class="icon-container-name">bubble-rt</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-bubble-check">
+      <use xlink:href="/svg-defs.svg#icon-bubble-check"></use>
+    </svg>
+    <span class="icon-container-name">bubble-check</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-speaker-line">
+      <use xlink:href="/svg-defs.svg#icon-speaker-line"></use>
+    </svg>
+    <span class="icon-container-name">speaker-line</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-speaker">
+      <use xlink:href="/svg-defs.svg#icon-speaker"></use>
+    </svg>
+    <span class="icon-container-name">speaker</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-circle-line">
+      <use xlink:href="/svg-defs.svg#icon-circle-line"></use>
+    </svg>
+    <span class="icon-container-name">circle-line</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-circle-check">
+      <use xlink:href="/svg-defs.svg#icon-circle-check"></use>
+    </svg>
+    <span class="icon-container-name">circle-check</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-monitoring">
+      <use xlink:href="/svg-defs.svg#icon-monitoring"></use>
+    </svg>
+    <span class="icon-container-name">monitoring</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-piechart">
+      <use xlink:href="/svg-defs.svg#icon-piechart"></use>
+    </svg>
+    <span class="icon-container-name">piechart</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-report">
+      <use xlink:href="/svg-defs.svg#icon-report"></use>
+    </svg>
+    <span class="icon-container-name">report</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-nimble">
+      <use xlink:href="/svg-defs.svg#icon-nimble"></use>
+    </svg>
+    <span class="icon-container-name">nimble</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-ragdoll-add">
+      <use xlink:href="/svg-defs.svg#icon-ragdoll-add"></use>
+    </svg>
+    <span class="icon-container-name">ragdoll-add</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-ragdoll-remove">
+      <use xlink:href="/svg-defs.svg#icon-ragdoll-remove"></use>
+    </svg>
+    <span class="icon-container-name">ragdoll-remove</span>
   </div>
 </div>
