Add Close icon svg

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -42,6 +42,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-close">
+      <use xlink:href="/svg-defs.svg#icon-close"></use>
+    </svg>
+    <span class="icon-container-name">close</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-credit-card">
       <use xlink:href="/svg-defs.svg#icon-credit-card"></use>
     </svg>
