--- a/sass/styleguide/sandbox.scss
+++ b/sass/styleguide/sandbox.scss
@@ -64,6 +64,7 @@ This library is divided in the following sections:
 @import "objects/sprites";
 @import "objects/tables";
 @import "objects/tabs";
+@import "objects/tooltips";
 
 
 /* 5. Layout */
