--- a/views/partial/menu.html
+++ b/views/partial/menu.html
@@ -11,6 +11,7 @@
     <a class="docs-menu-item {% if section == 'miscelanea' %}selected{% endif %}" href="/docs/miscelanea">Miscelanea</a>
     <a class="docs-menu-item {% if section == 'navigation' %}selected{% endif %}" href="/docs/navigation">Navigation</a>
     <a class="docs-menu-item {% if section == 'tables' %}selected{% endif %}" href="/docs/tables">Tables</a>
+    <a class="docs-menu-item {% if section == 'tooltips' %}selected{% endif %}" href="/docs/tooltips">Tooltips</a>
     <a class="docs-menu-item {% if section == 'typography' %}selected{% endif %}" href="/docs/typography">Typography</a>
   </nav>
 </div>
