--- a/views/components/tooltips/tooltips.html
+++ b/views/components/tooltips/tooltips.html
@@ -1,4 +1,4 @@
-<button class="btn btn-contrast tooltipped tooltipped-s tooltip-active mb4 mr2" aria-label="I am the tooltip!">Simple tooltip</button>
-<button class="btn btn-success tooltipped tooltipped-multiline tooltipped-e tooltip-active mb4" aria-label="This is normal multiline content for our new awesome tooltip!">
+<button class="btn btn-contrast tooltipped tooltipped-s mr3" aria-label="I am the tooltip!">Simple tooltip</button>
+<button class="btn btn-success tooltipped tooltipped-multiline tooltipped-e" aria-label="This is normal multiline content for our new awesome tooltip!">
   Multiline Tooltip
 </button>
