More padding for new tooltips

--- a/sass/styleguide/objects/_tooltips.scss
+++ b/sass/styleguide/objects/_tooltips.scss
@@ -15,7 +15,8 @@ $tooltip-text-color:       color($name: "background", $hue: "light");
   content: attr(aria-label);
   display: none;
   font-size: 1.3rem;
-  padding: .5rem .8rem;
+  line-height: 1.4;
+  padding: 1rem;
   pointer-events: none;
   position: absolute;
   text-align: center;
