Adds the learn icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -397,4 +397,12 @@
     </svg>
     <span class="icon-container-name">ragdoll-remove</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-learn">
+      <use xlink:href="/svg-defs.svg#icon-learn"></use>
+    </svg>
+    <span class="icon-container-name">learn</span>
+  </div>
+
 </div>
