Add rt, fav and rep icons

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -405,4 +405,24 @@
     <span class="icon-container-name">learn</span>
   </div>
 
+  <div class="icon-container">
+    <svg class="icon-fav">
+      <use xlink:href="/svg-defs.svg#icon-fav"></use>
+    </svg>
+    <span class="icon-container-name">fav</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-rep">
+      <use xlink:href="/svg-defs.svg#icon-rep"></use>
+    </svg>
+    <span class="icon-container-name">rep</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-rt">
+      <use xlink:href="/svg-defs.svg#icon-rt"></use>
+    </svg>
+    <span class="icon-container-name">rt</span>
+  </div>
 </div>
