Create card entry in doc

--- a/sass/styleguide/main.scss
+++ b/sass/styleguide/main.scss
@@ -60,6 +60,7 @@ This library is divided in the following sections:
 @import "objects/nav";
 @import "objects/pagination";
 @import "objects/panel";
+@import "objects/card-monitoring";
 @import "objects/sprites";
 @import "objects/tables";
 @import "objects/tabs";
