--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -425,4 +425,32 @@
     </svg>
     <span class="icon-container-name">rt</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-kebab">
+      <use xlink:href="/svg-defs.svg#icon-kebab"></use>
+    </svg>
+    <span class="icon-container-name">Kebab</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-running">
+      <use xlink:href="/svg-defs.svg#icon-running"></use>
+    </svg>
+    <span class="icon-container-name">Running</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-pause">
+      <use xlink:href="/svg-defs.svg#icon-pause"></use>
+    </svg>
+    <span class="icon-container-name">Pause</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-toggle">
+      <use xlink:href="/svg-defs.svg#icon-toggle"></use>
+    </svg>
+    <span class="icon-container-name">Toggle</span>
+  </div>
 </div>
