--- a/views/components/containers/card-monitoring.html
+++ b/views/components/containers/card-monitoring.html
@@ -1,7 +1,7 @@
-<div class="panel card">
-  <header class="panel-header">
-    <button class="btn btn-icon panel-header-action">
-      <svg class="icon">
+<div class="panel">
+  <header class="panel-header with-actions">
+    <button class="btn btn-icon action">
+      <svg class="icon-kebab">
         <use xlink:href="/svg-defs.svg#icon-kebab"></use>
       </svg>
     </button>
@@ -9,48 +9,33 @@
       This is the title of the card
       <span class="subtitle">This is the subtitle</span>
     </h2>
-
-    <button class="btn btn-icon panel-header-action">
+    <button class="btn btn-icon action">
       <svg class="icon">
         <use xlink:href="/svg-defs.svg#icon-toggle"></use>
       </svg>
     </button>
   </header>
 
-  <div class="hidden">
-    <hr>
-    <dl>
-      <dt></dt>
-      <dd></dd>
-      <dt class="db mt2 hundred percent"></dt>
-      <dd class="db mb2"></dd>
-      <dt></dt>
-      <dd></dd>
-    </dl>
-  </div>
-
   <div class="panel-body">
-    <dl class="card-main-data">
+    <dl class="card-data-list main-data">
       <dt class="card-data-title">Reference subtitle</dt>
       <dd class="card-data-value">99 999 / 999 999</dd>
     </dl>
     <hr class="card-split">
-    <dl class="card-data">
-      <dt class="card-data-title">Reference subtitle</dt>
-      <dd class="card-data-value">DD/ MM // AAAA</dd>
-      <dt class="card-data-title">Reference subtitle</dt>
-      <dd class="card-data-value">999 999</dd>
+    <dl class="card-data-list">
+      <dt class="card-data-title">Data title</dt>
+      <dd class="card-data-value">DD / MM / AAAA<span class="value-label">subtitle</span></dd>
+      <dt class="card-data-title">Data title</dt>
+      <dd class="card-data-value">999 999<span class="value-label">subtitle</span></dd>
     </dl>
-    <div class="card-status">
-      <button class="btn btn-contrast">
-        <svg class="icon">
-          <use xlink:href="/svg-defs.svg#icon-running"></use>
-        </svg>
-        Status
-      </button>
-    </div>
+    <button class="btn btn-contrast card-status">
+      <svg class="icon">
+        <use xlink:href="/svg-defs.svg#icon-running"></use>
+      </svg>
+      Status
+    </button>
     <div class="card-actions">
-      <button class="btn">
+      <button class="btn action">
         Label
       </button>
     </div>
