--- a/views/components/containers/card-monitoring.html
+++ b/views/components/containers/card-monitoring.html
@@ -18,15 +18,15 @@
 
   <div class="panel-body">
     <dl class="card-data-list main-data">
-      <dt class="card-data-title">Reference subtitle</dt>
-      <dd class="card-data-value">99 999 / 999 999</dd>
+      <dt class="data-title">Reference subtitle</dt>
+      <dd class="data-value">99 999 / 999 999</dd>
     </dl>
     <hr class="card-split">
     <dl class="card-data-list">
-      <dt class="card-data-title">Data title</dt>
-      <dd class="card-data-value">DD / MM / AAAA<span class="value-label">subtitle</span></dd>
-      <dt class="card-data-title">Data title</dt>
-      <dd class="card-data-value">999 999<span class="value-label">subtitle</span></dd>
+      <dt class="data-title">Data title</dt>
+      <dd class="data-value">DD / MM / AAAA<span class="value-label">subtitle</span></dd>
+      <dt class="data-title">Data title</dt>
+      <dd class="data-value">999 999<span class="value-label">subtitle</span></dd>
     </dl>
     <button class="btn btn-contrast card-status">
       <svg class="icon">
