--- a/sass/styleguide/objects/_forms.scss
+++ b/sass/styleguide/objects/_forms.scss
@@ -132,6 +132,12 @@ $input-v-padding:     ($input-height - $input-line-height)/2;
         padding: ($input-v-padding - .1rem) 1rem;
         vertical-align: middle;
         white-space: nowrap;
+
+        &:last-child {
+            border-radius: 0 3px 3px 0;
+            border-width: 1px;
+            font-weight: normal;
+        }
     }
 
     &.error {
