--- a/sass/styleguide/objects/_forms.scss
+++ b/sass/styleguide/objects/_forms.scss
@@ -205,3 +205,44 @@ $input-v-padding:     ($input-height - $input-line-height)/2;
         }
     }
 }
+
+// Radio buttons styling.
+.input-radio {
+  background-color: color($name: "border", $variant: "secondary", $hue: "light");
+  border-radius: 100%;
+  border: 1px solid color($name: "background", $hue: "light");
+  box-shadow: inset 0 1px 0 0 rgba(0,0,0,0.09);
+  cursor: pointer;
+  display: inline-block;
+  height: 2rem;
+  position: relative;
+  vertical-align: middle;
+  width: 2rem;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+
+  &:after {
+      background: color($name: "background", $hue: "light");
+      border-radius:100%;
+      border: 1px solid transparent;
+      box-shadow: 0 1px 0 rgba(0, 0, 0, 0.08);
+      content: '';
+      display: block;
+      height: 1rem;
+      left: 50%;
+      margin-left: -.5rem;
+      margin-top: -.5rem;
+      position: relative;
+      top: 50%;
+      width: 1rem;
+  }
+
+  &:checked:after {
+      background: color($name: "socialbro");
+      box-shadow: 0 1px 0 rgba(255, 255, 255, 0.33), inset 0 1px rgba(0, 0, 0, 0.09);
+  }
+
+  &:focus {
+      background: color($name: "socialbro", $variant: "tertiary");
+  }
+}
